feat: add fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Julia Zhuzhukalo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/icon-cv.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
